# Piply

./: .gitignore  README.md  angular.json  package-lock.json  package.json
.github/: copilot-instructions.md
.github/workflows/: tauri-build.yml
public/: splashscreen.html
src/: index.html  styles.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  connection_store.rs  connection_store.rs.backup  encryption.rs  ftp_client.rs  lib.rs  main.rs  sftp_client.rs  ssh_key_store.rs  transfer_manager.rs
src/app/: app.spec.ts  app.ts
src/app/components/activity-log/: activity-log.component.ts
src/app/components/conflict-dialog/: conflict-dialog.component.ts
src/app/components/connection-dialog/: connection-dialog.component.ts
src/app/components/connection-panel/: connection-panel.component.ts
src/app/components/file-tree/: file-tree.component.ts
src/app/components/folder-tree/: folder-tree.component.ts
src/app/components/local-browser/: local-browser.component.ts
src/app/components/mkdir-dialog/: mkdir-dialog.component.ts
src/app/components/permissions-dialog/: permissions-dialog.component.ts
src/app/components/permissions-window/: permissions-window.component.ts
src/app/components/rename-dialog/: rename-dialog.component.ts
src/app/services/: activity-log.service.ts  comparison.service.ts  connection.service.ts  filesystem.service.ts  keyboard-shortcut.service.ts  settings.service.ts  sync-browse.service.ts  transfer-history.service.ts  transfer.service.ts
(+7 files in other folders)
