[package]
name = "filie"
version = "0.1.0"
description = "A Simple small FTP/SFTP Client"
authors = []
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "filie_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
dashmap = "6"
suppaftp = { version = "6", features = ["async", "async-native-tls"] }
ssh2 = "0.9"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
futures = "0.3.32"
async-std = { version = "1.13.2", features = ["default"] }
rfd = "0.15"
aes-gcm = "0.10"
rand = "0.8"
hex = "0.4"
base64 = "0.22"
keyring = "2.1"
sha2 = "0.10"
